# ishell

./: .gitignore  CMakeLists.txt  Doxyfile  conanfile.txt
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/style/: action.yml
docs/secret_files/: decoded_secret  secret  secret_solution.md
docs/secret_files/87014aef1d77646b/: core.program.113099.core  header1  header2  program  program.asm
include/: calloc.h  free.h  heap_test.h  malloc.h  mem_logging.h  mem_metrics.h  memory.h  memory_test.h  realloc.h  test_mem.h
lib/memory/src/: memory.c
src/: calloc.c  free.c  main.c  malloc.c  mem_logging.c  mem_metrics.c  memory.c  realloc.c
tests/: CMakeLists.txt  heap_test.c  memory_test.c  test_mem.c
